first in game testing fixes/work

--- a/src/main/resources/assets/gearifiers/lang/en_us.json
+++ b/src/main/resources/assets/gearifiers/lang/en_us.json
@@ -1,5 +1,12 @@
 {
+	"equipment.modifier.gearifiers:legendary": "Legendary",
+	"equipment.modifier.gearifiers:vorpal": "Vorpal",
+
+	"equipment.modifier.gearifiers:legendary.desc": "+10% attack speed, +1.5 damage, + 1 armor, +1 health, +5% speed, +25% item durability",
+	"equipment.modifier.gearifiers:vorpal.desc": "+20% attack speed, 2.5% chance to deal 10x damage",
+
 	"equipment.modifier.gearifiers:blunt": "Blunt",
+	"equipment.modifier.gearifiers:demonic": "Demonic",
 	"equipment.modifier.gearifiers:dull": "Dull",
 	"equipment.modifier.gearifiers:honed": "Honed",
 	"equipment.modifier.gearifiers:keen": "Keen",
@@ -8,13 +15,160 @@
 	"equipment.modifier.gearifiers:ungodly_sharp": "Ungodly Sharp",
 	"equipment.modifier.gearifiers:useless": "Useless",
 
-	"equipment.modifier.gearifiers:blunt.desc": "-1.0 Attack Damage",
-	"equipment.modifier.gearifiers:dull.desc": "-0.5 Attack Damage",
-	"equipment.modifier.gearifiers:honed.desc": "+1.0 Attack Damage",
-	"equipment.modifier.gearifiers:keen.desc": "+1.5 Attack Damage",
-	"equipment.modifier.gearifiers:razor_sharp.desc": "+2.0 Attack Damage",
-	"equipment.modifier.gearifiers:sharp.desc": "+0.5 Attack Damage",
-	"equipment.modifier.gearifiers:ungodly_sharp.desc": "+3.0 Attack Damage",
-	"equipment.modifier.gearifiers:useless.desc": "-2.0 Attack Damage"
+	"equipment.modifier.gearifiers:blunt.desc": "-1 damage",
+	"equipment.modifier.gearifiers:demonic.desc": "+2.5 damage, +15% attack speed, +0.25 knockback, +0.5 attack range, chance to inflict weakness",
+	"equipment.modifier.gearifiers:dull.desc": "-0.5 damage",
+	"equipment.modifier.gearifiers:honed.desc": "+0.75 damage",
+	"equipment.modifier.gearifiers:keen.desc": "+1 damage",
+	"equipment.modifier.gearifiers:razor_sharp.desc": "+1.5 damage",
+	"equipment.modifier.gearifiers:sharp.desc": "+0.5 damage",
+	"equipment.modifier.gearifiers:ungodly_sharp.desc": "+2 damage, +5% attack speed",
+	"equipment.modifier.gearifiers:useless.desc": "-2 damage",
+
+	"equipment.modifier.gearifiers:bulwark": "Bulwark",
+	"equipment.modifier.gearifiers:indomitable": "Indomitable",
+	"equipment.modifier.gearifiers:protective": "Protective",
+	"equipment.modifier.gearifiers:thick": "Thick",
+	"equipment.modifier.gearifiers:thin": "Thin",
+	"equipment.modifier.gearifiers:unsubstantial": "Unsubstantial",
+
+	"equipment.modifier.gearifiers:bulwark.desc": "+1 armor, +0.5 toughness",
+	"equipment.modifier.gearifiers:indomitable.desc": "+2 armor, +1 toughness, +10% knockback resist",
+	"equipment.modifier.gearifiers:protective.desc": "+0.5 armor, +0.25 toughness",
+	"equipment.modifier.gearifiers:thick.desc": "+0.25 armor",
+	"equipment.modifier.gearifiers:thin.desc": "-0.25 armor",
+	"equipment.modifier.gearifiers:unsubstantial.desc": "-0.75 armor, -0.5 toughness",
+
+	"equipment.modifier.gearifiers:destroyed": "Destroyed",
+	"equipment.modifier.gearifiers:disrepaired": "Disrepaired",
+	"equipment.modifier.gearifiers:durable": "Durable",
+	"equipment.modifier.gearifiers:everlasting": "Everlasting",
+	"equipment.modifier.gearifiers:robust": "Robust",
+	"equipment.modifier.gearifiers:tattered": "Tattered",
+
+	"equipment.modifier.gearifiers:destroyed.desc": "Destroyed",
+	"equipment.modifier.gearifiers:disrepaired.desc": "Disrepaired",
+	"equipment.modifier.gearifiers:durable.desc": "Durable",
+	"equipment.modifier.gearifiers:everlasting.desc": "Everlasting",
+	"equipment.modifier.gearifiers:robust.desc": "Robust",
+	"equipment.modifier.gearifiers:tattered.desc": "Tattered",
+
+	"equipment.modifier.gearifiers:clumsy": "Clumsy",
+	"equipment.modifier.gearifiers:energetic": "Energetic",
+	"equipment.modifier.gearifiers:frenzied": "Frenzied",
+	"equipment.modifier.gearifiers:Manic": "Manic",
+	"equipment.modifier.gearifiers:unwieldy": "Unwieldy",
+
+	"equipment.modifier.gearifiers:clumsy.desc": "-10% attack speed",
+	"equipment.modifier.gearifiers:energetic.desc": "+10% attack speed",
+	"equipment.modifier.gearifiers:frenzied.desc": "+20% attack speed",
+	"equipment.modifier.gearifiers:Manic.desc": "+35% attack speed, chance to grant haste on hit",
+	"equipment.modifier.gearifiers:unwieldy.desc": "-25% attack speed",
+
+	"equipment.modifier.gearifiers:flourishing": "Flourishing",
+	"equipment.modifier.gearifiers:healthy": "Healthy",
+	"equipment.modifier.gearifiers:hearty": "Hearty",
+	"equipment.modifier.gearifiers:infirm": "Infirm",
+	"equipment.modifier.gearifiers:wimpy": "Wimpy",
+
+	"equipment.modifier.gearifiers:flourishing.desc": "+2 health",
+	"equipment.modifier.gearifiers:healthy.desc": "+0.5 health",
+	"equipment.modifier.gearifiers:hearty.desc": "+1 health",
+	"equipment.modifier.gearifiers:infirm.desc": "-0.5 health",
+	"equipment.modifier.gearifiers:wimpy.desc": "-1 health",
+
+	"equipment.modifier.gearifiers:lucky": "Lucky",
+	"equipment.modifier.gearifiers:unlucky": "Unlucky",
+
+	"equipment.modifier.gearifiers:lucky.desc": "+1 luck",
+	"equipment.modifier.gearifiers:unlucky.desc": "-1 luck",
+
+	"equipment.modifier.gearifiers:quick": "Quick",
+	"equipment.modifier.gearifiers:racing": "Racing",
+	"equipment.modifier.gearifiers:slow": "Slow",
+	"equipment.modifier.gearifiers:sluggish": "sluggish",
+	"equipment.modifier.gearifiers:speedy": "Speedy",
+
+	"equipment.modifier.gearifiers:quick.desc": "+2.5% move speed",
+	"equipment.modifier.gearifiers:racing.desc": "+10% move speed",
+	"equipment.modifier.gearifiers:slow.desc": "-2.5% move speed",
+	"equipment.modifier.gearifiers:sluggish.desc": "-5% move speed",
+	"equipment.modifier.gearifiers:speedy.desc": "+5% move speed",
+
+	"equipment.modifier.gearifiers:extension": "Extension",
+	"equipment.modifier.gearifiers:greater_extension": "Greater Extension",
+	"equipment.modifier.gearifiers:lesser_extension": "Lesser Extension",
+	"equipment.modifier.gearifiers:lesser_stubby": "Lesser Stubby",
+	"equipment.modifier.gearifiers:stubby": "Stubby",
+
+	"equipment.modifier.gearifiers:extension.desc": "+0.75 attack range",
+	"equipment.modifier.gearifiers:greater_extension.desc": "+1.5 attack range",
+	"equipment.modifier.gearifiers:lesser_extension.desc": "+0.25 attack range",
+	"equipment.modifier.gearifiers:lesser_stubby.desc": "-0.25 attack range",
+	"equipment.modifier.gearifiers:stubby.desc": "-0.75 attack range",
+
+	"equipment.modifier.gearifiers:grand_reach": "Grand Reach",
+	"equipment.modifier.gearifiers:greater_reach": "Greater Reach",
+	"equipment.modifier.gearifiers:lesser_limiting": "Lesser Limiting",
+	"equipment.modifier.gearifiers:lesser_reach": "Lesser Reach",
+	"equipment.modifier.gearifiers:limiting": "Limiting",
+	"equipment.modifier.gearifiers:reach": "Reach",
+
+	"equipment.modifier.gearifiers:grand_reach.desc": "+2.5 reach",
+	"equipment.modifier.gearifiers:greater_reach.desc": "+1.5 reach",
+	"equipment.modifier.gearifiers:lesser_limiting.desc": "-0.5 reach",
+	"equipment.modifier.gearifiers:lesser_reach.desc": "+0.5 reach",
+	"equipment.modifier.gearifiers:limiting.desc": "-1.25 reach",
+	"equipment.modifier.gearifiers:reach.desc": "+1 reach",
+
+	"equipment.modifier.gearifiers:additive": "Additive",
+	"equipment.modifier.gearifiers:blunting": "Blunting",
+	"equipment.modifier.gearifiers:dulling": "Dulling",
+	"equipment.modifier.gearifiers:harsh": "Harsh",
+	"equipment.modifier.gearifiers:reductive": "Reductive",
+
+	"equipment.modifier.gearifiers:additive.desc": "Adds 0.25 damage to incoming attacking",
+	"equipment.modifier.gearifiers:blunting.desc": "Reduces incoming damage by 5%",
+	"equipment.modifier.gearifiers:dulling.desc": "Reduces incoming damage by 2.5%",
+	"equipment.modifier.gearifiers:harsh.desc": "Increases incoming damage by 2.5%",
+	"equipment.modifier.gearifiers:reductive.desc": "Removes 0.25 damage from incoming attacks",
+
+	"equipment.modifier.gearifiers:shielding": "Shielding",
+	"equipment.modifier.gearifiers:poisonous": "Poisonous",
+	"equipment.modifier.gearifiers:toxic": "Toxic",
+	"equipment.modifier.gearifiers:desecrated": "Desecrated",
+	"equipment.modifier.gearifiers:forceful": "Forceful",
+	"equipment.modifier.gearifiers:greater_thieving": "Greater Thieving",
+	"equipment.modifier.gearifiers:Thieving": "Thieving",
+	"equipment.modifier.gearifiers:lesser_thieving": "Lesser Thieving",
+	"equipment.modifier.gearifiers:splitting": "Splitting",
+	"equipment.modifier.gearifiers:enriched": "Enriched",
+	"equipment.modifier.gearifiers:metallic": "Metallic",
+	"equipment.modifier.gearifiers:anthracitic": "Anthracitic",
+
+	"equipment.modifier.gearifiers:shielding.desc": "Chance to completely block incoming attack",
+	"equipment.modifier.gearifiers:poisonous.desc": "Poisons attackers on hit",
+	"equipment.modifier.gearifiers:toxic.desc": "Poisons attackers on hit",
+	"equipment.modifier.gearifiers:desecrated.desc": "Withers attackers on hit",
+	"equipment.modifier.gearifiers:forceful.desc": "Withers attackers on hit",
+	"equipment.modifier.gearifiers:greater_thieving.desc": "15% chance to roll mob loot tables twice",
+	"equipment.modifier.gearifiers:thieving.desc": "10% chance to roll mob loot tables twice",
+	"equipment.modifier.gearifiers:lesser_thieving.desc": "5% chance to roll mob loot tables twice",
+	"equipment.modifier.gearifiers:splitting.desc": "Chopping wood has a chance to drop sticks",
+	"equipment.modifier.gearifiers:enriched.desc": "Mining ores has a small chance of dropping gems",
+	"equipment.modifier.gearifiers:metallic.desc": "Mining ores has a small chance of dropping raw metals",
+	"equipment.modifier.gearifiers:anthracitic.desc": "Mining ores has a small chance of dropping coal",
+
+	"equipment.modifier.gearifiers:double_edged": "Double-Edged",
+	"equipment.modifier.gearifiers:jarring": "Jarring",
+	"equipment.modifier.gearifiers:clanging": "Clanging",
+	"equipment.modifier.gearifiers:greater_crumbling": "Greater Crumbling",
+	"equipment.modifier.gearifiers:crumbling": "Crumbling",
+
+	"equipment.modifier.gearifiers:double_edged.desc": "Hitting an enemy deals 1 damage to the holder",
+	"equipment.modifier.gearifiers:jarring.desc": "Chance to inflict slowness on the wielder",
+	"equipment.modifier.gearifiers:clanging.desc": "Chance to inflict weakness on the wielder",
+	"equipment.modifier.gearifiers:greater_crumbling.desc": "50% chance item takes double durability loss",
+	"equipment.modifier.gearifiers:crumbling.desc": "25% chance item takes double durability loss"
 
 }
