tweaks and updates after more testing

--- a/src/main/resources/assets/gearifiers/lang/en_us.json
+++ b/src/main/resources/assets/gearifiers/lang/en_us.json
@@ -46,12 +46,12 @@
 	"equipment.modifier.gearifiers:robust": "Robust",
 	"equipment.modifier.gearifiers:tattered": "Tattered",
 
-	"equipment.modifier.gearifiers:destroyed.desc": "Destroyed",
-	"equipment.modifier.gearifiers:disrepaired.desc": "Disrepaired",
-	"equipment.modifier.gearifiers:durable.desc": "Durable",
-	"equipment.modifier.gearifiers:everlasting.desc": "Everlasting",
-	"equipment.modifier.gearifiers:robust.desc": "Robust",
-	"equipment.modifier.gearifiers:tattered.desc": "Tattered",
+	"equipment.modifier.gearifiers:destroyed.desc": "-50 base & -50% durability",
+	"equipment.modifier.gearifiers:disrepaired.desc": "-25% durability",
+	"equipment.modifier.gearifiers:durable.desc": "+10% durability",
+	"equipment.modifier.gearifiers:everlasting.desc": "+50 base & +50% durability",
+	"equipment.modifier.gearifiers:robust.desc": "+25% durability",
+	"equipment.modifier.gearifiers:tattered.desc": "-10% durability",
 
 	"equipment.modifier.gearifiers:clumsy": "Clumsy",
 	"equipment.modifier.gearifiers:energetic": "Energetic",
@@ -150,7 +150,7 @@
 	"equipment.modifier.gearifiers:poisonous.desc": "Poisons attackers on hit",
 	"equipment.modifier.gearifiers:toxic.desc": "Poisons attackers on hit",
 	"equipment.modifier.gearifiers:desecrated.desc": "Withers attackers on hit",
-	"equipment.modifier.gearifiers:forceful.desc": "Withers attackers on hit",
+	"equipment.modifier.gearifiers:forceful.desc": "Knocks back targets",
 	"equipment.modifier.gearifiers:greater_thieving.desc": "15% chance to roll mob loot tables twice",
 	"equipment.modifier.gearifiers:thieving.desc": "10% chance to roll mob loot tables twice",
 	"equipment.modifier.gearifiers:lesser_thieving.desc": "5% chance to roll mob loot tables twice",
