added reroll altar block, got quick transfer working, resource files etc

--- a/src/main/resources/assets/gearifiers/lang/en_us.json
+++ b/src/main/resources/assets/gearifiers/lang/en_us.json
@@ -1,4 +1,7 @@
 {
+	"block.gearifiers.reroll_altar": "Reroll Altar",
+	"screen.gearifiers.reroll_altar": "Reroll Modifiers",
+
 	"equipment.modifier.gearifiers:legendary": "Legendary",
 	"equipment.modifier.gearifiers:vorpal": "Vorpal",
 
