--- a/src/main/resources/assets/gearifiers/lang/en_us.json
+++ b/src/main/resources/assets/gearifiers/lang/en_us.json
@@ -68,13 +68,13 @@
 	"equipment.modifier.gearifiers:clumsy": "Clumsy",
 	"equipment.modifier.gearifiers:energetic": "Energetic",
 	"equipment.modifier.gearifiers:frenzied": "Frenzied",
-	"equipment.modifier.gearifiers:Manic": "Manic",
+	"equipment.modifier.gearifiers:manic": "Manic",
 	"equipment.modifier.gearifiers:unwieldy": "Unwieldy",
 
 	"equipment.modifier.gearifiers:clumsy.desc": "-10% attack speed",
 	"equipment.modifier.gearifiers:energetic.desc": "+10% attack speed",
 	"equipment.modifier.gearifiers:frenzied.desc": "+20% attack speed",
-	"equipment.modifier.gearifiers:Manic.desc": "+35% attack speed, chance to grant haste on hit",
+	"equipment.modifier.gearifiers:manic.desc": "+35% attack speed, chance to grant haste on hit",
 	"equipment.modifier.gearifiers:unwieldy.desc": "-25% attack speed",
 
 	"equipment.modifier.gearifiers:flourishing": "Flourishing",
@@ -151,7 +151,7 @@
 	"equipment.modifier.gearifiers:desecrated": "Desecrated",
 	"equipment.modifier.gearifiers:forceful": "Forceful",
 	"equipment.modifier.gearifiers:greater_thieving": "Greater Thieving",
-	"equipment.modifier.gearifiers:Thieving": "Thieving",
+	"equipment.modifier.gearifiers:thieving": "Thieving",
 	"equipment.modifier.gearifiers:lesser_thieving": "Lesser Thieving",
 	"equipment.modifier.gearifiers:splitting": "Splitting",
 	"equipment.modifier.gearifiers:enriched": "Enriched",
