fix unholy modifier lang

--- a/src/main/resources/assets/gearifiers/lang/en_us.json
+++ b/src/main/resources/assets/gearifiers/lang/en_us.json
@@ -165,6 +165,7 @@
 	"equipment.modifier.gearifiers:poisonous": "Poisonous",
 	"equipment.modifier.gearifiers:toxic": "Toxic",
 	"equipment.modifier.gearifiers:desecrated": "Desecrated",
+	"equipment.modifier.gearifiers:unholy": "Unholy",
 	"equipment.modifier.gearifiers:forceful": "Forceful",
 	"equipment.modifier.gearifiers:greater_thieving": "Greater Thieving",
 	"equipment.modifier.gearifiers:thieving": "Thieving",
@@ -178,6 +179,7 @@
 	"equipment.modifier.gearifiers:poisonous.desc": "Poisons attackers on hit",
 	"equipment.modifier.gearifiers:toxic.desc": "Poisons attackers on hit",
 	"equipment.modifier.gearifiers:desecrated.desc": "Withers attackers on hit",
+	"equipment.modifier.gearifiers:unholy.desc": "Withers attackers on hit",
 	"equipment.modifier.gearifiers:forceful.desc": "Knocks back targets",
 	"equipment.modifier.gearifiers:greater_thieving.desc": "15% chance to roll mob loot tables twice",
 	"equipment.modifier.gearifiers:thieving.desc": "10% chance to roll mob loot tables twice",
