add in tex, register items, add transferal seal

--- a/src/main/resources/assets/gearifiers/lang/en_us.json
+++ b/src/main/resources/assets/gearifiers/lang/en_us.json
@@ -1,4 +1,21 @@
 {
+	"item.gearifiers.repair_kit": "Repair Kit",
+	"item.gearifiers.repair_kit.flavor": "Repairs the gear held in your offhand like an anvil",
+	"item.gearifiers.repair_kit.uses": "Uses left: %1$s",
+	"item.gearifiers.seal_of_awakening": "Seal of Awakening",
+	"item.gearifiers.seal_of_awakening.flavor": "Adds a random good modifier to your offhand item",
+	"item.gearifiers.seal_of_chaos": "Seal of Chaos",
+	"item.gearifiers.seal_of_chaos.flavor": "Adds any random modifier to your offhand item",
+	"item.gearifiers.seal_of_cleansing": "Seal of Cleansing",
+	"item.gearifiers.seal_of_cleansing.flavor": "Removes all modifiers from your offhand item",
+	"item.gearifiers.seal_of_legends": "Seal of Legends",
+	"item.gearifiers.seal_of_legends.flavor": "Adds a random legendary or epic modifier to your offhand item",
+	"item.gearifiers.seal_of_transferal": "Seal of Transferal",
+	"item.gearifiers.seal_of_transferal.flavor": "Use on one offhand item to transfer its modifiers into the seal; us on another to transfer into that item.",
+	"item.gearifiers.seal_of_transferal.stored_modifiers": "Stored Modifiers:",
+	"item.gearifiers.whetstone": "Whetstone",
+	"item.gearifiers.whetstone.flavor": "Adds or upgrades the Sharp modifier to your offhand item",
+
 	"block.gearifiers.reroll_altar": "Reroll Altar",
 	"screen.gearifiers.reroll_altar": "Reroll Modifiers",
 	"screen.gearifiers.xp_clue_good": "Experience levels to reroll",
