--- a/src/main/resources/assets/gearifiers/lang/en_us.json
+++ b/src/main/resources/assets/gearifiers/lang/en_us.json
@@ -13,6 +13,8 @@
 	"item.gearifiers.seal_of_transferal": "Seal of Transferal",
 	"item.gearifiers.seal_of_transferal.flavor": "Use on one offhand item to transfer its modifiers into the seal; us on another to transfer into that item.",
 	"item.gearifiers.seal_of_transferal.stored_modifiers": "Stored Modifiers:",
+	"item.gearifiers.seal_of_wiping": "Seal of Wiping",
+	"item.gearifiers.seal_of_wiping.flavor": "Removes a negative modifier from your offhand item, leaving the positive modifiers.",
 	"item.gearifiers.whetstone": "Whetstone",
 	"item.gearifiers.whetstone.flavor": "Adds or upgrades the Sharp modifier to your offhand item",
 
