implement new ranged weapon modifiers, further tweaks to mixins.

--- a/src/main/resources/assets/gearifiers/lang/en_us.json
+++ b/src/main/resources/assets/gearifiers/lang/en_us.json
@@ -54,25 +54,41 @@
 	"equipment.modifier.gearifiers:legendary.desc": "+10% attack speed, +1.5 damage, +1 armor, +1 health, +5% speed, +25% item durability",
 	"equipment.modifier.gearifiers:vorpal.desc": "+20% attack speed, small chance to deal 10x damage",
 
-	"equipment.modifier.gearifiers:blunt": "Blunt",
 	"equipment.modifier.gearifiers:demonic": "Demonic",
-	"equipment.modifier.gearifiers:dull": "Dull",
-	"equipment.modifier.gearifiers:honed": "Honed",
-	"equipment.modifier.gearifiers:keen": "Keen",
-	"equipment.modifier.gearifiers:razor_sharp": "Razor Sharp",
-	"equipment.modifier.gearifiers:sharp": "Sharp",
 	"equipment.modifier.gearifiers:ungodly_sharp": "Ungodly Sharp",
+	"equipment.modifier.gearifiers:razor_sharp": "Razor Sharp",
+	"equipment.modifier.gearifiers:keen": "Keen",
+	"equipment.modifier.gearifiers:honed": "Honed",
+	"equipment.modifier.gearifiers:sharp": "Sharp",
+	"equipment.modifier.gearifiers:dull": "Dull",
+	"equipment.modifier.gearifiers:blunt": "Blunt",
 	"equipment.modifier.gearifiers:useless": "Useless",
 
-	"equipment.modifier.gearifiers:blunt.desc": "-1 damage",
 	"equipment.modifier.gearifiers:demonic.desc": "+2.5 damage, +15% attack speed, +0.25 knockback, +0.5 attack range, chance to inflict weakness",
-	"equipment.modifier.gearifiers:dull.desc": "-0.5 damage",
-	"equipment.modifier.gearifiers:honed.desc": "+0.75 damage",
-	"equipment.modifier.gearifiers:keen.desc": "+1 damage",
-	"equipment.modifier.gearifiers:razor_sharp.desc": "+1.5 damage",
-	"equipment.modifier.gearifiers:sharp.desc": "+0.5 damage",
 	"equipment.modifier.gearifiers:ungodly_sharp.desc": "+2 damage, +5% attack speed",
+	"equipment.modifier.gearifiers:razor_sharp.desc": "+1.5 damage",
+	"equipment.modifier.gearifiers:keen.desc": "+1 damage",
+	"equipment.modifier.gearifiers:honed.desc": "+0.75 damage",
+	"equipment.modifier.gearifiers:sharp.desc": "+0.5 damage",
+	"equipment.modifier.gearifiers:dull.desc": "-0.5 damage",
+	"equipment.modifier.gearifiers:blunt.desc": "-1 damage",
 	"equipment.modifier.gearifiers:useless.desc": "-2 damage",
+
+	"equipment.modifier.gearifiers:demon_barbed": "Demon-Barbed",
+	"equipment.modifier.gearifiers:needlelike": "Needlelike",
+	"equipment.modifier.gearifiers:barbed": "Barbed",
+	"equipment.modifier.gearifiers:acute": "Acute",
+	"equipment.modifier.gearifiers:pointy": "Pointy",
+	"equipment.modifier.gearifiers:unpointy": "Unpointy",
+	"equipment.modifier.gearifiers:rounded": "Rounded",
+
+	"equipment.modifier.gearifiers:demon_barbed.desc": "+35% ranged projectile damage. Hits weaken and can blind targets.",
+	"equipment.modifier.gearifiers:needlelike.desc": "+25% ranged projectile damage",
+	"equipment.modifier.gearifiers:barbed.desc": "+15% ranged projectile damage",
+	"equipment.modifier.gearifiers:acute.desc": "+10% ranged projectile damage",
+	"equipment.modifier.gearifiers:pointy.desc": "+5% ranged projectile damage",
+	"equipment.modifier.gearifiers:unpointy.desc": "-5% ranged projectile damage",
+	"equipment.modifier.gearifiers:rounded.desc": "-20% ranged projectile damage",
 
 	"equipment.modifier.gearifiers:bulwark": "Bulwark",
 	"equipment.modifier.gearifiers:indomitable": "Indomitable",
@@ -195,6 +211,11 @@
 	"equipment.modifier.gearifiers:enriched": "Enriched",
 	"equipment.modifier.gearifiers:metallic": "Metallic",
 	"equipment.modifier.gearifiers:anthracitic": "Anthracitic",
+	"equipment.modifier.gearifiers:explosive": "Explosive",
+	"equipment.modifier.gearifiers:hobbling": "Hobbling",
+	"equipment.modifier.gearifiers:hungering": "Hungering",
+	"equipment.modifier.gearifiers:weakening": "Weakening",
+	"equipment.modifier.gearifiers:vampiric": "Vampiric",
 
 	"equipment.modifier.gearifiers:shielding.desc": "Chance to completely block incoming attack",
 	"equipment.modifier.gearifiers:poisonous.desc": "Poisons attackers on hit",
@@ -209,16 +230,23 @@
 	"equipment.modifier.gearifiers:enriched.desc": "Mining ores has a small chance of dropping gems",
 	"equipment.modifier.gearifiers:metallic.desc": "Mining ores has a small chance of dropping raw metals",
 	"equipment.modifier.gearifiers:anthracitic.desc": "Mining ores has a small chance of dropping coal",
+	"equipment.modifier.gearifiers:explosive.desc": "Projectiles have a chance to create an explosion on impact",
+	"equipment.modifier.gearifiers:hobbling.desc": "Projectiles slow targets on hit",
+	"equipment.modifier.gearifiers:hungering.desc": "Projectiles hunger targets on hit",
+	"equipment.modifier.gearifiers:weakening.desc": "Projectiles weaken targets in hit",
+	"equipment.modifier.gearifiers:vampiric.desc": "Gain 7.5% of damage dealt as health",
 
 	"equipment.modifier.gearifiers:double_edged": "Double-Edged",
 	"equipment.modifier.gearifiers:jarring": "Jarring",
 	"equipment.modifier.gearifiers:clanging": "Clanging",
+	"equipment.modifier.gearifiers:betraying": "Betraying",
 	"equipment.modifier.gearifiers:greater_crumbling": "Greater Crumbling",
 	"equipment.modifier.gearifiers:crumbling": "Crumbling",
 
 	"equipment.modifier.gearifiers:double_edged.desc": "Hitting an enemy deals 1 damage to the holder",
 	"equipment.modifier.gearifiers:jarring.desc": "Chance to inflict slowness on the wielder",
 	"equipment.modifier.gearifiers:clanging.desc": "Chance to inflict weakness on the wielder",
+	"equipment.modifier.gearifiers:betraying.desc": "Projectiles regenerate targets on hit",
 	"equipment.modifier.gearifiers:greater_crumbling.desc": "50% chance item takes double durability loss",
 	"equipment.modifier.gearifiers:crumbling.desc": "25% chance item takes double durability loss"
 
