--- a/src/main/resources/assets/gearifiers/lang/en_us.json
+++ b/src/main/resources/assets/gearifiers/lang/en_us.json
@@ -12,9 +12,11 @@
 	"item.gearifiers.seal_of_fate.flavor": "Rerolls the modifiers on your offhand item",
 	"item.gearifiers.seal_of_legends": "Seal of Legends",
 	"item.gearifiers.seal_of_legends.flavor": "Adds a random legendary or epic modifier to your offhand item",
+	"item.gearifiers.seal_of_legends.max": "Maximum uses exceeded on this gear",
 	"item.gearifiers.seal_of_transferal": "Seal of Transferal",
 	"item.gearifiers.seal_of_transferal.flavor": "Use on one offhand item to transfer its modifiers into the seal; us on another to transfer into that item.",
 	"item.gearifiers.seal_of_transferal.stored_modifiers": "Stored Modifiers:",
+	"item.gearifiers.seal_of_transferal.max": "Maximum uses exceeded on this gear",
 	"item.gearifiers.seal_of_wiping": "Seal of Wiping",
 	"item.gearifiers.seal_of_wiping.flavor": "Removes a negative modifier from your offhand item, leaving the positive modifiers.",
 	"item.gearifiers.whetstone": "Whetstone",
