update with new FC impl

--- a/src/main/resources/assets/gearifiers/lang/en_us.json
+++ b/src/main/resources/assets/gearifiers/lang/en_us.json
@@ -53,8 +53,8 @@
 	"equipment.modifier.gearifiers:legendary": "Legendary",
 	"equipment.modifier.gearifiers:vorpal": "Vorpal",
 
-	"equipment.modifier.gearifiers:legendary.desc": "+10% attack speed, +1.5 damage, +1 armor, +1 health, +5% speed, +25% item durability",
-	"equipment.modifier.gearifiers:vorpal.desc": "+20% attack speed, small chance to deal 10x damage",
+	"equipment.modifier.gearifiers:legendary.desc": "+5% attack speed, +1 damage, +1 armor, +1 health, +5% speed, +25% item durability",
+	"equipment.modifier.gearifiers:vorpal.desc": "+10% attack speed, small chance to deal 10x damage",
 
 	"equipment.modifier.gearifiers:demonic": "Demonic",
 	"equipment.modifier.gearifiers:ungodly_sharp": "Ungodly Sharp",
@@ -66,15 +66,15 @@
 	"equipment.modifier.gearifiers:blunt": "Blunt",
 	"equipment.modifier.gearifiers:useless": "Useless",
 
-	"equipment.modifier.gearifiers:demonic.desc": "+2.5 damage, +15% attack speed, +0.25 knockback, +0.5 attack range, chance to inflict weakness",
-	"equipment.modifier.gearifiers:ungodly_sharp.desc": "+2 damage, +5% attack speed",
-	"equipment.modifier.gearifiers:razor_sharp.desc": "+1.5 damage",
-	"equipment.modifier.gearifiers:keen.desc": "+1 damage",
-	"equipment.modifier.gearifiers:honed.desc": "+0.75 damage",
-	"equipment.modifier.gearifiers:sharp.desc": "+0.5 damage",
-	"equipment.modifier.gearifiers:dull.desc": "-0.5 damage",
-	"equipment.modifier.gearifiers:blunt.desc": "-1 damage",
-	"equipment.modifier.gearifiers:useless.desc": "-2 damage",
+	"equipment.modifier.gearifiers:demonic.desc": "+1.5 damage, +5% attack speed, +0.25 knockback, +0.5 attack range, chance to inflict weakness",
+	"equipment.modifier.gearifiers:ungodly_sharp.desc": "+1.25 damage",
+	"equipment.modifier.gearifiers:razor_sharp.desc": "+1 damage",
+	"equipment.modifier.gearifiers:keen.desc": "+0.75 damage",
+	"equipment.modifier.gearifiers:honed.desc": "+0.5 damage",
+	"equipment.modifier.gearifiers:sharp.desc": "+0.25 damage",
+	"equipment.modifier.gearifiers:dull.desc": "-0.25 damage",
+	"equipment.modifier.gearifiers:blunt.desc": "-0.75 damage",
+	"equipment.modifier.gearifiers:useless.desc": "-1.5 damage",
 
 	"equipment.modifier.gearifiers:demon_barbed": "Demon-Barbed",
 	"equipment.modifier.gearifiers:needlelike": "Needlelike",
@@ -84,13 +84,13 @@
 	"equipment.modifier.gearifiers:unpointy": "Unpointy",
 	"equipment.modifier.gearifiers:rounded": "Rounded",
 
-	"equipment.modifier.gearifiers:demon_barbed.desc": "+30% ranged projectile damage. Hits weaken and can blind targets.",
-	"equipment.modifier.gearifiers:needlelike.desc": "+20% ranged projectile damage",
-	"equipment.modifier.gearifiers:barbed.desc": "+12% ranged projectile damage",
-	"equipment.modifier.gearifiers:acute.desc": "+8% ranged projectile damage",
-	"equipment.modifier.gearifiers:pointy.desc": "+4% ranged projectile damage",
-	"equipment.modifier.gearifiers:unpointy.desc": "-4% ranged projectile damage",
-	"equipment.modifier.gearifiers:rounded.desc": "-20% ranged projectile damage",
+	"equipment.modifier.gearifiers:demon_barbed.desc": "+15% ranged projectile damage, +5% movement speed. Hits weaken and can blind targets.",
+	"equipment.modifier.gearifiers:needlelike.desc": "+10% ranged projectile damage",
+	"equipment.modifier.gearifiers:barbed.desc": "+7.5% ranged projectile damage",
+	"equipment.modifier.gearifiers:acute.desc": "+5% ranged projectile damage",
+	"equipment.modifier.gearifiers:pointy.desc": "+2.5% ranged projectile damage",
+	"equipment.modifier.gearifiers:unpointy.desc": "-2.5% ranged projectile damage",
+	"equipment.modifier.gearifiers:rounded.desc": "-15% ranged projectile damage",
 
 	"equipment.modifier.gearifiers:bulwark": "Bulwark",
 	"equipment.modifier.gearifiers:indomitable": "Indomitable",
@@ -99,8 +99,8 @@
 	"equipment.modifier.gearifiers:thin": "Thin",
 	"equipment.modifier.gearifiers:unsubstantial": "Unsubstantial",
 
-	"equipment.modifier.gearifiers:bulwark.desc": "+1 armor, +0.5 toughness",
-	"equipment.modifier.gearifiers:indomitable.desc": "+2 armor, +1 toughness, +10% knockback resist",
+	"equipment.modifier.gearifiers:bulwark.desc": "+0.75 armor, +0.35 toughness",
+	"equipment.modifier.gearifiers:indomitable.desc": "+1 armor, +0.5 toughness, +10% knockback resist",
 	"equipment.modifier.gearifiers:protective.desc": "+0.5 armor, +0.25 toughness",
 	"equipment.modifier.gearifiers:thick.desc": "+0.25 armor",
 	"equipment.modifier.gearifiers:thin.desc": "-0.25 armor",
@@ -126,11 +126,11 @@
 	"equipment.modifier.gearifiers:manic": "Manic",
 	"equipment.modifier.gearifiers:unwieldy": "Unwieldy",
 
-	"equipment.modifier.gearifiers:clumsy.desc": "-10% attack speed",
-	"equipment.modifier.gearifiers:energetic.desc": "+10% attack speed",
-	"equipment.modifier.gearifiers:frenzied.desc": "+20% attack speed",
-	"equipment.modifier.gearifiers:manic.desc": "+35% attack speed, chance to grant haste on hit",
-	"equipment.modifier.gearifiers:unwieldy.desc": "-25% attack speed",
+	"equipment.modifier.gearifiers:clumsy.desc": "-2.5% attack speed",
+	"equipment.modifier.gearifiers:energetic.desc": "+2.5% attack speed",
+	"equipment.modifier.gearifiers:frenzied.desc": "+7.5% attack speed",
+	"equipment.modifier.gearifiers:manic.desc": "+15% attack speed, chance to grant haste on hit",
+	"equipment.modifier.gearifiers:unwieldy.desc": "-10% attack speed",
 
 	"equipment.modifier.gearifiers:flourishing": "Flourishing",
 	"equipment.modifier.gearifiers:healthy": "Healthy",
@@ -144,11 +144,13 @@
 	"equipment.modifier.gearifiers:infirm.desc": "-0.5 health",
 	"equipment.modifier.gearifiers:wimpy.desc": "-1 health",
 
+	"equipment.modifier.gearifiers:super_lucky": "Super Lucky",
 	"equipment.modifier.gearifiers:lucky": "Lucky",
 	"equipment.modifier.gearifiers:unlucky": "Unlucky",
 
-	"equipment.modifier.gearifiers:lucky.desc": "+1 luck",
-	"equipment.modifier.gearifiers:unlucky.desc": "-1 luck",
+	"equipment.modifier.gearifiers:super_lucky.desc": "+1 luck",
+	"equipment.modifier.gearifiers:lucky.desc": "+0.5 luck",
+	"equipment.modifier.gearifiers:unlucky.desc": "-0.5 luck",
 
 	"equipment.modifier.gearifiers:quick": "Quick",
 	"equipment.modifier.gearifiers:racing": "Racing",
